--- a/src/app/shared/ui/buttons/add-button-icon/add-button-icon.component.html
+++ b/src/app/shared/ui/buttons/add-button-icon/add-button-icon.component.html
@@ -7,5 +7,5 @@
   type="button"
   (click)="onButtonClick(dialogId)"
 >
-  {{ action | uppercase }} {{ item | uppercase }}
+  {{ action | uppercase }}
 </button>
