--- a/src/app/shared/ui/buttons/actions-buttons/actions-buttons.component.html
+++ b/src/app/shared/ui/buttons/actions-buttons/actions-buttons.component.html
@@ -1,29 +1,47 @@
 @if (id) {
-  <app-button-icon
-    [buttonAppear]="TuiAppearance.Primary"
-    [buttonShape]="'rounded'"
-    [buttonSize]="'m'"
-    [buttonIcon]="'tuiIconEdit2'"
-    [buttonClass]="'button-edit'"
-  ></app-button-icon>
+  <tui-hosted-dropdown
+    #dropdown
+    [content]="content"
+    [(open)]="dropdownOpen"
+  >
+    <button
+      appearance="flat"
+      icon="tuiIconMoreVertical"
+      tuiIconButton
+      type="button"
+      [pseudoHover]="dropdown.open || null"
+    ></button>
+  </tui-hosted-dropdown>
+  <ng-template
+    #content
+    let-activeZone
+  >
+    <app-button-icon
+      [buttonAppear]="TuiAppearance.Primary"
+      [buttonShape]="'rounded'"
+      [buttonSize]="'m'"
+      [buttonIcon]="'tuiIconEdit2'"
+      [buttonClass]="'button-edit'"
+    ></app-button-icon>
 
-  <app-button-icon
-    [buttonAppear]="'create'"
-    [buttonShape]="'rounded'"
-    [buttonSize]="'m'"
-    [buttonIcon]="'tuiIconSave'"
-    [buttonClass]="'button-update'"
-    (click)="submit('edit')"
-  ></app-button-icon>
+    <app-button-icon
+      [buttonAppear]="'create'"
+      [buttonShape]="'rounded'"
+      [buttonSize]="'m'"
+      [buttonIcon]="'tuiIconSave'"
+      [buttonClass]="'button-update'"
+      (click)="submit('edit')"
+    ></app-button-icon>
 
-  <app-button-icon
-    [buttonAppear]="TuiAppearance.Accent"
-    [buttonShape]="'rounded'"
-    [buttonSize]="'m'"
-    [buttonIcon]="'tuiIconTrash'"
-    [buttonClass]="'button-remove'"
-    (click)="delete()"
-  ></app-button-icon>
+    <app-button-icon
+      [buttonAppear]="TuiAppearance.Accent"
+      [buttonShape]="'rounded'"
+      [buttonSize]="'m'"
+      [buttonIcon]="'tuiIconTrash'"
+      [buttonClass]="'button-remove'"
+      (click)="delete()"
+    ></app-button-icon>
+  </ng-template>
 } @else {
   <app-button-icon
     [buttonAppear]="'create'"
